--- a/src/app/modules/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/modules/editar-colaborador/editar-colaborador.component.html
@@ -37,7 +37,7 @@
                             <mat-error *ngIf="form.get('apMaterno')?.hasError('required')"><strong class="txt_msg">**Campo requerido</strong></mat-error>
                         </mat-form-field>
                     
-                        <mat-form-field appearance="outline" class="inputs_properties">
+                        <!--<mat-form-field appearance="outline" class="inputs_properties">
                             <mat-label>RFC</mat-label>
                             <input type="text" placeholder="RFC" minlength="12" maxlength="13" matInput autocomplete="off" formControlName="rfc" id="rfc" [errorStateMatcher]="matcher">
                             <mat-error *ngIf="form.get('rfc')?.hasError('required')"><strong class="txt_msg">**Campo requerido</strong></mat-error>
@@ -47,7 +47,7 @@
                             <mat-error *ngIf="form.get('rfc')?.hasError('pattern') && !form.get('rfc')?.hasError('required')">
                               <strong class="txt_msg">**Formato no valido, (solo mayúsculas y números)...</strong>
                             </mat-error>
-                        </mat-form-field>
+                        </mat-form-field>-->
 
                           <mat-form-field appearance="outline" class="inputs_properties">
                             <mat-label>Sucursal</mat-label>
