--- a/src/app/modules/horarios-vista/horarios-vista.component.css
+++ b/src/app/modules/horarios-vista/horarios-vista.component.css
@@ -16,7 +16,7 @@
     font-weight:700;
 }
 
-.title .close-btn {
+.close-btn {
     background-color: rgb(219, 219, 219);
     border: none;
     width: 35px;
