--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -1,5 +1,6 @@
 <br>
-<h1>Pago de membresia en efectivo</h1>
+<h1 style="margin-left: 66px;">Pago de membresia en efectivo</h1>
+<br>
 <div class="grid-menu" style=" justify-content: center;">
     <mat-tab-group>
         <!-- APARTADO 1, LISTADO TOTAL DE CLIENTES CON UNA MEMBRESIA ACTIVA -->
