--- a/src/app/modules/alta-categoria/alta-categoria.component.css
+++ b/src/app/modules/alta-categoria/alta-categoria.component.css
@@ -9,6 +9,13 @@
     font-family: Arial, sans-serif;
   }
   
+  .title {
+    background-color: #eeeded;
+    padding: 12px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
   
   /* Estilos para .inputs_properties */
   .inputs_properties {
