--- a/src/app/modules/editar-categoria/editar-categoria.component.css
+++ b/src/app/modules/editar-categoria/editar-categoria.component.css
@@ -8,6 +8,14 @@
     border-radius: 20px;
     font-family: Arial, sans-serif;
   }
+
+  .title {
+    background-color: #eeeded;
+    padding: 15px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:700;
+}
   
   
   /* Estilos para .inputs_properties */
