--- a/src/app/modules/editar-producto/editar-producto.component.css
+++ b/src/app/modules/editar-producto/editar-producto.component.css
@@ -46,3 +46,10 @@
   margin-top: 80px;
  }
 
+ .title {
+  background-color: #eeeded;
+  padding: 12px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+}
