--- a/src/app/modules/ventas/ventas.component.html
+++ b/src/app/modules/ventas/ventas.component.html
@@ -1,63 +1,64 @@
-<div class="container mt-4">
-   <div class="row">
-      <!--<div class="col-sm-4">
-         <button class="open-cash-register" (click)="mostrarInput()" >
-         <span class="icon"></span>
-         <span class="btn-text" style="color: black;margin-left: 20px;">ABRIR CAJA</span>
-         </button>
+<div >
+   <!--<div class="col-sm-4">
+      <button class="open-cash-register" (click)="mostrarInput()" >
+      <span class="icon"></span>
+      <span class="btn-text" style="color: black;margin-left: 20px;">ABRIR CAJA</span>
+      </button>
       </div>
-
+      
       <div class="col-sm-4">
-         <button class="close-cash-register" style="margin-left: 20px;" (click)="actualizarCaja()" [disabled]="botonDeshabilitado">
-         <span class="icon"></span>
-         <span class="btn-text" style="color: rgb(255, 255, 255);margin-left: 20px;">CERRAR CAJA</span>
-         </button>
+      <button class="close-cash-register" style="margin-left: 20px;" (click)="actualizarCaja()" [disabled]="botonDeshabilitado">
+      <span class="icon"></span>
+      <span class="btn-text" style="color: rgb(255, 255, 255);margin-left: 20px;">CERRAR CAJA</span>
+      </button>
       </div>
-
+      
       <div class="col-sm-4">
-         <button class="ver-cash-register" style="float: right;" routerLink="../verCorte">
-         <span class="icon"></span>
-         <span class="btn-text" style="color: rgb(255, 255, 255);margin-left: 20px;">VER CORTE</span>
-         </button>
+      <button class="ver-cash-register" style="float: right;" routerLink="../verCorte">
+      <span class="icon"></span>
+      <span class="btn-text" style="color: rgb(255, 255, 255);margin-left: 20px;">VER CORTE</span>
+      </button>
       </div>-->
-       <!-- <form [formGroup]="formularioCaja">
-         <div *ngIf="botonProductos && !mostrarLasVentas">
-           <h1>¿Deseas continuar?</h1>
-            <div style="display: flex; justify-content: center;">
-               <button style="background-color: rgb(240, 240, 240); color: rgb(0, 0, 0); padding: 10px 20px; 
-                  border-radius: 5px; border: 1px solid black; color: black; cursor: pointer; transition: background-color 0.3s ease; width: 90%;"  (click)="mostrarP()">Continuar caja</button>
-            </div>
+   <!-- <form [formGroup]="formularioCaja">
+      <div *ngIf="botonProductos && !mostrarLasVentas">
+        <h1>¿Deseas continuar?</h1>
+         <div style="display: flex; justify-content: center;">
+            <button style="background-color: rgb(240, 240, 240); color: rgb(0, 0, 0); padding: 10px 20px; 
+               border-radius: 5px; border: 1px solid black; color: black; cursor: pointer; transition: background-color 0.3s ease; width: 90%;"  (click)="mostrarP()">Continuar caja</button>
          </div>
-         <div class="row">
-        <div class="row" *ngIf="!mostrarProductos && mostrarInputFlag &&!botonProductos && !mostrarLasVentas">
-           <div>
-               <br/><br/>
-               <label>¿Con cuánto dinero empiezas el turno? *</label>
-               <input class="number" type="number" id="cashInput" placeholder="Ingrese el monto" style="margin-top: 10px;" formControlName="cantidadDineroExistente">
-            </div>
-            <div class="col-sm-6">
-               <br/>
-               <label>Fecha actual:</label>
-               <input type="text" id="fechaInput" [value]="fecha"  formControlName="fechaApertura" [disabled]="modoLectura">
-            </div>
+      </div>
+      <div class="row">
+      <div class="row" *ngIf="!mostrarProductos && mostrarInputFlag &&!botonProductos && !mostrarLasVentas">
+        <div>
             <br/><br/>
-            <div class="col-sm-12"></div>
-            <div class="col-sm-6">
-               <br/>
-               <button style="width: 50%;   background-color: #fd9727; display: inline-flex;
-                  align-items: center;
-                  padding: 10px 20px;
-                  font-size: 16px;
-                  border: none;
-                  border-radius: 5px;" (click)="mostrarCaja()">
-               Empezar turno
-               </button>
-            </div>
+            <label>¿Con cuánto dinero empiezas el turno? *</label>
+            <input class="number" type="number" id="cashInput" placeholder="Ingrese el monto" style="margin-top: 10px;" formControlName="cantidadDineroExistente">
          </div>
+         <div class="col-sm-6">
+            <br/>
+            <label>Fecha actual:</label>
+            <input type="text" id="fechaInput" [value]="fecha"  formControlName="fechaApertura" [disabled]="modoLectura">
+         </div>
+         <br/><br/>
+         <div class="col-sm-12"></div>
+         <div class="col-sm-6">
+            <br/>
+            <button style="width: 50%;   background-color: #fd9727; display: inline-flex;
+               align-items: center;
+               padding: 10px 20px;
+               font-size: 16px;
+               border: none;
+               border-radius: 5px;" (click)="mostrarCaja()">
+            Empezar turno
+            </button>
+         </div>
+      </div>
       </form>-->
-      <div>
-         <h1>VENTAS</h1>
-     <!-- <div *ngIf="mostrarProductos && cerrarCaja">
+   <div class="title"  mat-dialog-title>
+      <label>VENTAS</label>
+   </div>
+   <div  mat-dialog-content>
+      <!-- <div *ngIf="mostrarProductos && cerrarCaja">
          <div class="search-label">
             <h2 style="margin-right: 15px;">Busca a tu cliente:</h2>
             <div class="search-container" (click)="abrirDialogo()">
@@ -81,7 +82,8 @@
                <input type="text" id="email" name="email" [value]="cliente.email || ''" disabled><br><br>
             </div>
          </div>-->
- 
+      <div>
+         <br>
          <h3>Ingresa el valor de una columna</h3>
          <mat-form-field class="full-width">
             <mat-label>Filtro</mat-label>
@@ -95,28 +97,28 @@
          <div class="table-container">
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-                  <th mat-header-cell *matHeaderCellDef>{{ column | titlecase }}</th>
-                 <td mat-cell *matCellDef="let prod">
-                   <ng-container *ngIf="column !== 'cantidad'">
+               <th mat-header-cell *matHeaderCellDef>{{ column | titlecase }}</th>
+               <td mat-cell *matCellDef="let prod">
+                  <ng-container *ngIf="column !== 'cantidad'">
                      {{ prod[column] }}
-                   </ng-container>
-                   <ng-container *ngIf="column === 'cantidad'">
+                  </ng-container>
+                  <ng-container *ngIf="column === 'cantidad'">
                      <mat-form-field class="custom-mat-form-field">
-                       <input matInput [(ngModel)]="prod.cantidad" type="number" min="0" class="custom-input" (keyup.enter)="validarYAgregarProducto(prod)" />
+                        <input matInput [(ngModel)]="prod.cantidad" type="number" min="0" class="custom-input" (keyup.enter)="validarYAgregarProducto(prod)" />
                      </mat-form-field>
-                   </ng-container>                   
-                   <ng-container *ngIf="column === 'acciones'">
+                  </ng-container>
+                  <ng-container *ngIf="column === 'acciones'">
                      <button (click)="validarYAgregarProducto(prod)" style="background-color: #000000; color: #ffffff; border: none; padding: 10px; height: 40px; border-radius: 5px; cursor: pointer; display: flex; align-items: center;">
                         Agregar
                         <mat-icon class="add-box-icon" style="margin-left: 5px; font-size: 18px;">add_box</mat-icon>
-                      </button>                      
-                   </ng-container>
-                 </td>
+                     </button>
+                  </ng-container>
+               </td>
                </ng-container>
                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                <tr mat-row *matRowDef="let productofila; columns: displayedColumns"></tr>
-             </table>
-             <mat-paginator #paginator [pageSizeOptions]="[3, 10, 20, 30,40,50,100,200,300,4000]" showFirstLastButtons></mat-paginator>
+            </table>
+            <mat-paginator #paginator [pageSizeOptions]="[3, 10, 20, 30,40,50,100,200,300,4000]" showFirstLastButtons></mat-paginator>
          </div>
          <div class="resumen">
             <h1>Resumen de Compra</h1>
@@ -145,10 +147,13 @@
                   <input matInput [(ngModel)]="dineroRecibido" placeholder="Ingresa cantidad" #input type="number" min="0" />
                </mat-form-field>
                <h2>Cambio: ${{ (dineroRecibido - totalAPagar).toFixed(2) }}</h2>
-               <button mat-raised-button style="margin-right: 20px; background-color: black;" (click)="imprimirResumen()">Imprimir</button>
                <!--<button mat-raised-button color="#fd9727"  (click)="enviarDatosYDetallesVenta()">Registrar venta</button>-->
             </div>
          </div>
       </div>
-      <br>
    </div>
+   <div style="display: flex; justify-content: center;" mat-dialog-actions>
+      <button mat-raised-button style="font-size: 20px; margin-top: 17px;height: 40px;background-color: black; color: #ffffff;" (click)="imprimirResumen()">Imprimir</button>
+      <button mat-stroked-button (click)="cerrarDialogo()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px;color: rgb(0, 0, 0);">Cancelar</button>
+   </div>
+</div>
